--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "preskribe",
-  "version": "1.0.0",
-  "description": "Prescription managment application",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd client && npm start",
-    "server": "cd server && npm run server",
-    "dev": "concurrently \"npm run client\" \"npm run server\""
-  },
-  "author": "Akhil S",
-  "license": "ISC",
-  "dependencies": {
-    "@mui/material": "^5.2.8",
-    "axios": "^0.24.0",
-    "concurrently": "^7.0.0",
-    "history": "^5.2.0",
-    "moment": "^2.29.1",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "redux-thunk": "^2.4.1"
-  }
+	"name": "preskribe",
+	"version": "1.0.0",
+	"description": "Prescription managment application",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"client": "cd client && npm start",
+		"server": "cd server && npm run server",
+		"dev": "concurrently \"npm run client\" \"npm run server\""
+	},
+	"author": "Akhil S",
+	"license": "ISC",
+	"dependencies": {
+		"concurrently": "^7.0.0"
+	}
 }
