--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,15 @@
   "author": "Akhil S",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
+    "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
   }
 }
