--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "history": "^5.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
