--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "history": "^5.2.0",
     "moment": "^2.29.1",
+    "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.1",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.1",
     "w3-css": "^4.1.0",
     "web-vitals": "^2.1.3"
   },
