--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,18 @@
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
     "config": "^3.3.7",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
+    "passport-twitter": "^1.0.4",
+    "socket.io": "^4.4.1"
   }
 }
